Cascading Change Log

4.0 [unreleased]

  Added c.o.h.Base64HashFunction, c.o.h.Base64URLHashFunction, and c.o.h.Base10HashFunction functions to provide
  cryptographic digest based hashing. The default algorithm is SHA-1.

  Updated all jars to include the Automatic-Module-Name property.

  Added c.t.t.TapWith interface to provide fluent factories for creating new immutable instance of the current
  c.t.Tap type. This allows Tap instances to be their own factory type.

  Updated c.t.p.BasePartitionTap to implements c.t.t.FileType so that it may be used with a c.t.FileAdaptorTap.
  Specifically the Hadoop c.t.h.PartitionTap can be used with the c.t.l.h.LocalHfsAdaptor class.

  Fixed issue with c.t.h.i.TapOutputCollector where _temporary folders would be deleted prematurely under some
  conditions.

  Added support for collections to c.n.j.JSONCoercibleType.

  Added c.t.l.h.LocalHfsAdaptor, a c.t.FileAdaptorTap implementation, to provide Apache HDFS access, via c.t.h.Hfs
  and existing Apache Hadoop c.s.Scheme implementations, to local mode c.f.Flow instances.

  Added c.t.AdaptorTap and c.t.FileAdaptorTap implementations to ease adapting a c.t.Tap implementation from its
  original intended target platform for execution on another.

  Added c.s.l.CompressorScheme base class providing compression support to c.s.l.TextLine, c.s.l.TextDelimited,
  c.n.j.l.JSONTextLine and any sub-classes in local mode.

  Added c.n.j.JSONCreateFunction to compliment c.n.j.JSONSetFunction for creating new JSON objects.

  Added c.n.j.h.JSONTextLine and c.n.j.l.JSONTextLine c.s.Scheme classes for native JSON text file support.

  Added c.t.t.SerializableType annotation to allow for discovery of serialization providers for supported platforms.

  Updated project to use JGrapht version 1.1.0.

  Added sub-projects cascading-nested and cascading-nested-json providing base support for nested data types and
  direct support for JSON data processing.

  Removed cascading-xml sub-project.
