@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2016-2018 Chris K Wensel <chris@wensel.net>. All Rights Reserved.
  * Copyright (c) 2007-2017 Xplenty, Inc. All Rights Reserved.
  *
  * Project and contact information: http://www.cascading.org/
@@ -35,10 +36,12 @@ import cascading.flow.hadoop.stream.graph.HadoopReduceStreamGraph;
 import cascading.flow.hadoop.util.HadoopUtil;
 import cascading.flow.hadoop.util.TimedIterator;
 import cascading.flow.planner.BaseFlowNode;
+import cascading.flow.stream.StopDataNotificationException;
 import cascading.flow.stream.duct.Duct;
 import cascading.flow.stream.element.ElementDuct;
 import cascading.tap.Tap;
 import cascading.tuple.Tuple;
+import cascading.util.LogUtil;
 import cascading.util.Util;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.MapReduceBase;
@@ -144,6 +147,10 @@ public class FlowReducer extends MapReduceBase implements Reducer
     try
       {
       group.accept( (Tuple) key, timedIterators );
+      }
+    catch( StopDataNotificationException exception )
+      {
+      LogUtil.logWarnOnce( LOG, "received unsupported stop data notification, ignoring: {}", exception.getMessage() );
       }
     catch( OutOfMemoryError error )
       {
